# zush

./: .gitignore  .releaserc.json  BUILD.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE.md  QUICK_START.md  README.md  TEMPLATE_HELPERS.md  THEMES.md  build-all.sh  config.example.toml  create-release.sh  install.sh  test_prompt.sh
.github/: PLATFORMS.md  WORKFLOWS.md
.github/workflows/: ci.yml  release.yml  semantic-release.yml  version.yml
examples/: THEMES_GUIDE.md  demo-themes.sh
examples/themes/: README.md  candy.toml  catppuccin.toml  dcs.toml  dracula.toml  gruvbox.toml  minimal.toml  nord.toml  ocean.toml  pastel-powerline.toml  powerline.toml  sakura.toml  sunset.toml  tokyonight.toml  unicorn.toml
scripts/: commit.sh  install.sh  test_prompt.sh
src/: cli.rs  defaults.rs  git.rs  main.rs  symbols.rs  toml_helpers.rs
src/buffer/: mod.rs
src/color/: mod.rs
src/config/: mod.rs
src/history/: entry.rs  mod.rs  search.rs  storage.rs
src/history/tui/: full.rs  fzf.rs  mod.rs
src/init/: mod.rs  zsh.rs
src/modules/: aws.rs  docker.rs  gcloud.rs  go.rs  kubernetes.rs  mod.rs  node.rs  python.rs  registry.rs  ruby.rs  rust_lang.rs  terraform.rs
src/segments/: mod.rs
src/template/: mod.rs  preprocessor.rs
themes/: aurora.toml  boulevard.toml  catppuccin.toml  cyberpunk.toml  dcs.toml  ember.toml  frost.toml  galaxy.toml  hacker.toml  matrix.toml  midnight.toml  minimal.toml  neon.toml  ocean-deep.toml  powerline.toml  radioactive.toml  remote.toml  split.toml  starship.toml  synthwave.toml  vaporwave.toml
