[package]
name = "zush-prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal handling and colors
crossterm = "0.27"
termcolor = "1.4"
terminal_size = "0.3"
unicode-width = "0.1"
unicode-segmentation = "1.10"

# Template engine
handlebars = "5.1"
tera = { version = "1.19", optional = true }

# Serialization for config and state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance and async
tokio = { version = "1.35", features = ["full"], optional = true }
rayon = "1.8"

# Git integration
git2 = "0.18"

# System info
sysinfo = "0.30"
whoami = "1.4"

# Time handling
chrono = "0.4"

# Path handling
dirs = "5.0"
shellexpand = "3.1"

# Caching for performance
cached = "0.46"

[features]
default = []
async = ["tokio"]
tera-templates = ["tera"]

[profile.release]
lto = false
codegen-units = 16
strip = false
opt-level = 2
