[package]
name = "zush-prompt"
version = "1.3.0"
edition = "2021"

[dependencies]
# Terminal handling and colors
crossterm = "0.27"
terminal_size = "0.3"
unicode-width = "0.1"
unicode-segmentation = "1.10"

# Template engine
handlebars = "5.1"
tera = { version = "1.19", optional = true }

# Serialization for config and state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Async (optional)
tokio = { version = "1.35", features = ["full"], optional = true }

# Git integration
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# System info
sysinfo = "0.30"
whoami = "1.4"

# Time handling
chrono = "0.4"

# Path handling
dirs = "5.0"
shellexpand = "3.1"

# History feature
fs4 = { version = "0.11", optional = true }
ratatui = { version = "0.29", optional = true }
nucleo = { version = "0.5", optional = true }
nucleo-matcher = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["history"]
async = ["tokio"]
tera-templates = ["tera"]
history = ["fs4", "ratatui", "nucleo", "nucleo-matcher", "libc", "tempfile"]

[profile.release]
lto = false
codegen-units = 16
strip = false
opt-level = 2
